; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb/extr_ttusb2.c_tt3650_ci_write_attribute_mem.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb/extr_ttusb2.c_tt3650_ci_write_attribute_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_ca_en50221 = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"%d 0x%04x 0x%02x\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@TT3650_CMD_CI_WR_ATTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_ca_en50221*, i32, i32, i32)* @tt3650_ci_write_attribute_mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tt3650_ci_write_attribute_mem(%struct.dvb_ca_en50221* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.dvb_ca_en50221*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [3 x i32], align 4
  store %struct.dvb_ca_en50221* %0, %struct.dvb_ca_en50221** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* %9, align 4
  %14 = call i32 @ci_dbg(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %4
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %5, align 4
  br label %33

20:                                               ; preds = %4
  %21 = load i32, i32* %8, align 4
  %22 = ashr i32 %21, 8
  %23 = and i32 %22, 15
  %24 = getelementptr inbounds [3 x i32], [3 x i32]* %10, i64 0, i64 0
  store i32 %23, i32* %24, align 4
  %25 = load i32, i32* %8, align 4
  %26 = getelementptr inbounds [3 x i32], [3 x i32]* %10, i64 0, i64 1
  store i32 %25, i32* %26, align 4
  %27 = load i32, i32* %9, align 4
  %28 = getelementptr inbounds [3 x i32], [3 x i32]* %10, i64 0, i64 2
  store i32 %27, i32* %28, align 4
  %29 = load %struct.dvb_ca_en50221*, %struct.dvb_ca_en50221** %6, align 8
  %30 = load i32, i32* @TT3650_CMD_CI_WR_ATTR, align 4
  %31 = getelementptr inbounds [3 x i32], [3 x i32]* %10, i64 0, i64 0
  %32 = call i32 @tt3650_ci_msg_locked(%struct.dvb_ca_en50221* %29, i32 %30, i32* %31, i32 3, i32 3)
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %20, %17
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @ci_dbg(i8*, i32, i32, i32) #1

declare dso_local i32 @tt3650_ci_msg_locked(%struct.dvb_ca_en50221*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
